config/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /workbenches-hardware-profile
  failurePolicy: Fail
  name: hardwareprofile-notebook-injector.opendatahub.io
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - notebooks
  sideEffects: None
  timeoutSeconds: 5
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /workbenches-connection-notebook
  failurePolicy: Fail
  name: connection-notebook.opendatahub.io
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - notebooks
  sideEffects: None
  timeoutSeconds: 5
